--- a/frontend_web/package.json
+++ b/frontend_web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.3.0",
